# IndrasNetwork

./: .claude  .gitignore  .graphifyignore  AGENTS.md  AGENT_TEAMS.md  ARCHITECTURE.md  CHANGELOG.md  CHAT_INTERFACE_SO_FAR.md  CLAUDE.md  CLAUDECODE_NEW_ONTOLOGY_PLAN.md  CONTRIBUTING.md  COVENANT.md  Cargo.toml  DESIGN.md  DESIGN_SYSTEM.html  DESIGN_v0.md  DIOXUS_IMPLEMENTATION.md  INDRAS-NETWORK-SPEC.md  INDRAS_FUSE_PLAN.md  IROH_INTEGRATION_PLAN.md  KNOWLEDGE_BASE.md  LOGS.md  MERGE.md  MERGE2.md  MIGRATION_PLAN.md  NEXT.md  NEXT_STEPS.md  NOTES.md  OPUS_BUILD_PLAN.md  PASS_STORY.md  PLAN.md  README.md  SECURITY.md  STATUS.md  UI_ARCHITECTURE.md  UI_UPGRADE.md  WORLD_VIEW.json  indra  indras_workspace.html  preview-dark.html  (+3 more)
crates/indras-agent-hook/: Cargo.toml
crates/indras-agent-hook/src/: main.rs
crates/indras-appflowy-bridge/: Cargo.toml
crates/indras-appflowy-bridge/src/: envelope.rs  error.rs  id_mapping.rs  inbound.rs  lib.rs  outbound.rs  plugin.rs
crates/indras-appflowy-bridge/tests/: integration.rs
crates/indras-artifacts/: AGENTS.md  Cargo.toml
crates/indras-artifacts/src/: access.rs  artifact.rs  attention.rs  error.rs  exchange.rs  intention.rs  lib.rs  peering.rs  request.rs  store.rs  story.rs  token.rs  vault.rs
crates/indras-artifacts/tests/: integration.rs
crates/indras-chat/: AGENTS.md  Cargo.toml
crates/indras-chat/src/: bridge.rs  lib.rs  main.rs  state.rs  style.css
crates/indras-collaboration-viewer/: AGENTS.md  Cargo.toml
crates/indras-collaboration-viewer/assets/: styles.css
crates/indras-collaboration-viewer/src/: lib.rs  main.rs  theme.rs
crates/indras-core/: AGENTS.md  Cargo.toml
crates/indras-core/src/: error.rs  event.rs  identity.rs  interface.rs  lib.rs  mock_transport.rs  packet.rs  routing.rs  traits.rs  transport.rs
crates/indras-crypto/: AGENTS.md  Cargo.toml
crates/indras-crypto/benches/: crypto_benchmarks.rs
crates/indras-crypto/src/: account_root.rs  artifact_encryption.rs  credential.rs  device_cert.rs  entropy.rs  erasure.rs  error.rs  interface_key.rs  key_distribution.rs  lib.rs  pass_story.rs  pq_identity.rs  pq_kem.rs  shamir.rs  steward_share.rs  story_template.rs  word_frequencies.rs
crates/indras-dashboard/: AGENTS.md  Cargo.toml  Dioxus.toml  testdashboard
crates/indras-dashboard/assets/: style.css  themes.css
crates/indras-dashboard/src/: app.rs  layout.rs  main.rs  theme.rs
crates/indras-dtn/: AGENTS.md  Cargo.toml
crates/indras-dtn/benches/: dtn_benchmarks.rs
crates/indras-dtn/src/: bundle.rs  custody.rs  epidemic.rs  error.rs  expiration.rs  lib.rs  prophet.rs  strategy.rs
crates/indras-dtn/tests/: fault_injection.rs
crates/indras-exchange/: Cargo.toml
crates/indras-exchange/assets/: exchange.css
crates/indras-exchange/src/: app.rs  encounter.rs  engine.rs  lib.rs  main.rs  state.rs
crates/indras-fuse/: Cargo.toml
crates/indras-fuse/src/: attention.rs  config.rs  fs.rs  inode.rs  lib.rs  main.rs  mapping.rs  peers.rs  permissions.rs  realms.rs  virtual_files.rs  write_buffer.rs
crates/indras-fuse/tests/: integration.rs
crates/indras-genesis/: AGENTS.md  Cargo.toml
crates/indras-genesis/assets/: styles.css
crates/indras-genesis/src/: lib.rs  main.rs  theme.rs
crates/indras-gift-cycle/: Cargo.toml
crates/indras-gift-cycle/assets/: gift-cycle.css
crates/indras-gift-cycle/src/: app.rs  bridge.rs  data.rs  main.rs  state.rs
crates/indras-gossip/: AGENTS.md  Cargo.toml
crates/indras-gossip/src/: error.rs  events.rs  lib.rs  message.rs  node.rs  topic.rs
crates/indras-gossip/tests/: stress.rs
crates/indras-home-viewer/: AGENTS.md  Cargo.toml
crates/indras-home-viewer/assets/: styles.css
crates/indras-home-viewer/src/: lib.rs  main.rs  playback.rs  theme.rs
crates/indras-homepage/: Cargo.toml
crates/indras-homepage/src/: auth.rs  grants.rs  lib.rs  profile.rs  relay_bridge.rs  server.rs  storage.rs  templates.rs
crates/indras-iot/: AGENTS.md  Cargo.toml
crates/indras-iot/src/: compact.rs  duty_cycle.rs  lib.rs  low_memory.rs
crates/indras-iot/tests/: stress.rs
crates/indras-logging/: AGENTS.md  Cargo.toml
crates/indras-logging/src/: config.rs  context.rs  correlation.rs  layers.rs  lib.rs  otel.rs
crates/indras-logging/tests/: stress.rs
crates/indras-messaging/: AGENTS.md  Cargo.toml
crates/indras-messaging/src/: client.rs  error.rs  history.rs  lib.rs  message.rs  schema.rs
crates/indras-messaging/tests/: stress.rs
crates/indras-network/: AGENTS.md  Cargo.toml
crates/indras-network/src/: access.rs  artifact.rs  artifact_index.rs  artifact_recovery.rs  artifact_sharing.rs  artifact_sync.rs  attention.rs  bioregion_catalog.rs  blessing.rs  chat_message.rs  config.rs  connection.rs  contact_invite.rs  contacts.rs  direct_connect.rs  document.rs  document_registry.rs  encounter.rs  encryption.rs  error.rs  escape.rs  handshake.rs  home_realm.rs  humanness.rs  identity_code.rs  invite.rs  lib.rs  member.rs  message.rs  network.rs  note.rs  proof_folder.rs  quest.rs  read_tracker.rs  realm.rs  realm_alias.rs  sentiment.rs  story_auth.rs  stream.rs  system_event.rs  (+4 more)
crates/indras-network/tests/: artifact_access.rs  home_realm.rs  peering_e2e.rs
crates/indras-node/: AGENTS.md  Cargo.toml
crates/indras-node/src/: bundle_store.rs  config.rs  delivery_tracker.rs  dtn_manager.rs  error.rs  keystore.rs  lib.rs  message_handler.rs  sync_task.rs
crates/indras-node/tests/: integration.rs  node_log_test.rs  relay_integration.rs
crates/indras-peering/: AGENTS.md  Cargo.toml
crates/indras-realm-viewer/: AGENTS.md  Cargo.toml
crates/indras-relay/: AGENTS.md  Cargo.toml
crates/indras-routing/: AGENTS.md  Cargo.toml
crates/indras-storage/: AGENTS.md  Cargo.toml
crates/indras-sync/: AGENTS.md  Cargo.toml
crates/indras-sync-engine/: AGENTS.md  Cargo.toml
simulation/: AGENTS.md  Cargo.toml  test_events.jsonl
simulation/reports/: pq_stress_report.json
simulation/scripts/: run_stress_tests.sh
simulation/src/: bridge.rs  integration_scenarios.rs  lib.rs  main.rs  scenarios.rs  simulation.rs  topology.rs  types.rs
(+923 files in other folders)
