[package]
name = "indras-simulation"
version.workspace = true
edition.workspace = true
description = "Mesh network simulation with store-and-forward routing for offline peers"

[dependencies]
# Core traits and types
indras-core.workspace = true
indras-routing.workspace = true
indras-storage.workspace = true
indras-crypto.workspace = true
indras-sync.workspace = true
indras-logging.workspace = true
indras-dtn.workspace = true
indras-node.workspace = true
indras-iot.workspace = true

# Core iroh stack (for future real networking)
iroh.workspace = true
iroh-gossip.workspace = true

# CRDT for synced peer interfaces
automerge.workspace = true

# Async runtime
tokio.workspace = true
n0-future.workspace = true

# Serialization
serde.workspace = true
postcard.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
derive_more.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI for running scenarios
clap.workspace = true

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "async"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

# Crypto helpers for pass story simulation bindings
blake3 = "1.6"
hex = "0.4"
tempfile = "3.24"

[[bin]]
name = "lua_runner"
path = "src/bin/lua_runner.rs"

[dev-dependencies]
tokio-test.workspace = true
