[package]
name = "indras-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Three-primitive domain model: Artifact, Attention Switch, Mutual Peering"

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.8"

[dev-dependencies]
