[package]
name = "indras-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P Telegram-style chat for Indras Network"

[[bin]]
name = "indras-chat"
path = "src/main.rs"

[lib]
name = "indras_chat"
path = "src/lib.rs"

[dependencies]
# UI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Indras crates
indras-network = { path = "../indras-network" }
indras-sync-engine = { path = "../indras-sync-engine" }
indras-crypto = { path = "../indras-crypto" }

# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
hex = "0.4"
futures = "0.3"
