[package]
name = "indras-core"
version.workspace = true
edition.workspace = true
description = "Core traits, types, and errors for Indras Network"

[dependencies]
# Serialization
serde.workspace = true
postcard.workspace = true

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

# Concurrency
dashmap.workspace = true

# Utilities
thiserror.workspace = true
chrono.workspace = true
bytes.workspace = true
derive_more.workspace = true
rand.workspace = true
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test.workspace = true
