[package]
name = "indras-crypto"
version.workspace = true
edition.workspace = true
description = "Cryptographic primitives for Indras Network - envelope encryption and key management"

[dependencies]
indras-core.workspace = true

# Crypto
x25519-dalek = { workspace = true, features = ["static_secrets"] }
chacha20poly1305.workspace = true
rand.workspace = true

# Post-quantum cryptography (NIST standardized)
pqcrypto-kyber = "0.8"      # NIST ML-KEM (Kyber) - FIPS 203
pqcrypto-dilithium = "0.5"  # NIST ML-DSA (Dilithium) - FIPS 204
pqcrypto-traits = "0.3"     # Common PQ crypto traits

# Serialization
serde.workspace = true
postcard.workspace = true

# Memory security
zeroize = { version = "1.8", features = ["derive"] }

# Utilities
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
hex = "0.4"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "crypto_benchmarks"
harness = false
