[package]
name = "indras-dtn"
version.workspace = true
edition.workspace = true
description = "Delay-tolerant networking for Indras Network"

[dependencies]
indras-core.workspace = true

# Serialization
serde.workspace = true

# Utilities
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
