[package]
name = "indras-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P Artifact Vault as a FUSE Filesystem"

[dependencies]
indras-artifacts = { path = "../indras-artifacts" }

# FUSE
fuser = "0.15"

# Async runtime (for future network ops)
tokio = { workspace = true }

# Serialization (for virtual files)
serde = { workspace = true }
serde_json = "1"

# Utilities
blake3 = "1.8"
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
libc = "0.2"
bytes = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
