[package]
name = "indras-gift-cycle"
version.workspace = true
edition.workspace = true
description = "Gift Cycle GUI — a single-purpose app centered on the 6-stage gift economy cycle"

[[bin]]
name = "indras-gift-cycle"
path = "src/main.rs"

[dependencies]
# UI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Indras crates
indras-network = { path = "../indras-network" }
indras-artifacts.workspace = true
indras-sync-engine = { path = "../indras-sync-engine" }
indras-crypto = { path = "../indras-crypto" }
indras-homepage = { path = "../indras-homepage" }
indras-profile = { path = "../indras-profile" }

# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Streams
futures = "0.3"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
