[package]
name = "indras-home-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-person home realm viewer for Indras Network"

[[bin]]
name = "indras-home-viewer"
path = "src/main.rs"

[dependencies]
# UI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread", "io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
