[package]
name = "indras-homepage"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "HTTP homepage server for indras nodes"

[dependencies]
indras-artifacts.workspace = true
blake3.workspace = true
hex.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["net"] }
tower-http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
thiserror.workspace = true
serde_json = "1.0"
ed25519-dalek.workspace = true
base64.workspace = true

[dev-dependencies]
tokio-test.workspace = true
