[package]
name = "indras-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-instance JSONL logging with OpenTelemetry support for Indras Network"

[dependencies]
# Internal crates
indras-core = { workspace = true }

# Tracing ecosystem
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"

# OpenTelemetry
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
