[package]
name = "indras-realm-viewer"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone dashboard viewer for Indras realm features"

[[bin]]
name = "realm-viewer"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
