[package]
name = "indras-relay"
version.workspace = true
edition.workspace = true
description = "Blind relay server for Indras P2P mesh - stores and forwards encrypted events"

[[bin]]
name = "indras-relay"
path = "src/main.rs"

[dependencies]
indras-core.workspace = true
indras-transport.workspace = true
indras-crypto.workspace = true

# Iroh transport stack
iroh.workspace = true
iroh-gossip.workspace = true
rand.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"
postcard.workspace = true
toml = "0.8"

# Storage
redb = "2.4"

# HTTP admin API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
bytes.workspace = true
futures-lite = "2"

# Cryptography (credential verification)
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
blake3.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.15"
