[package]
name = "indras-storage"
version.workspace = true
edition.workspace = true
description = "Storage abstractions for Indras Network - packet and document persistence"

[dependencies]
indras-core.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
postcard.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test.workspace = true
rand.workspace = true
