[package]
name = "indras-storage"
version.workspace = true
edition.workspace = true
description = "Storage abstractions for Indras Network - packet and document persistence"

[dependencies]
indras-core.workspace = true

# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
postcard.workspace = true

# Structured storage
redb = "2.4"

# Content-addressed blobs (using BLAKE3 hashing)
blake3 = "1.6"
hex = "0.4"

# Utilities
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
bytes = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test.workspace = true
rand.workspace = true
tempfile = "3.19"
